@startuml
title Sėjomainos ir planavimo istorijos klasių modelis
left to right direction
skinparam packageStyle rectangle

package "Sąsajos / Views" {
  class PlotRotationPage <<boundary>> {
    +handleGenerate(event)
    +handleConfirm()
    +handleDraftItemDecision(entry, value, manualNote)
    +handleReject()
  }
  class PlotHistoryPage <<boundary>>
}

package "Valdikliai / Controllers" {
  class RotationController <<control>> {
    +index(request, plot, accessService)
    +recommendations(request, plot, accessService, rotationPlannerService)
    +store(request, plot, accessService, plotSnapshotService, rotationPlannerService)
    +plan(request, plot, accessService, rotationPlannerService)
    +updateDraftItem(request, plot, rotationPlanDraft, plant, accessService, rotationPlannerService)
    +confirm(request, plot, rotationPlanDraft, accessService, plotSnapshotService, rotationPlannerService)
    +reject(request, plot, rotationPlanDraft, accessService, rotationPlannerService)
  }
  class HistoryController <<control>> {
    +index(request, plot, accessService, plotSnapshotService)
  }
}

package "Paslaugos / Services" {
  class AccessService <<service>>
  class RotationPlannerService <<service>> {
    +evaluatePlot(plot, planningDate)
    +evaluatePlacement(plot, plant, targetZone, fromDate)
    +createDraft(plot, planningDate, owner)
    +updateDraftItem(plot, draft, plant, payload)
    +confirmDraft(plot, draft, plotSnapshotService, owner)
    +rejectDraft(draft)
  }
  class CropRotationClassifier <<service>> {
    +profileForPlant(plant)
  }
  class PlotSnapshotService <<service>> {
    +capture(plot, action, owner, metadata)
    +captureCommittedVersion(plot, owner, metadata)
    +listForPlot(plot, limit)
    +listHistoryForPlot(plot, limit)
  }
}

package "Esybės / Models" {
  class Plot <<entity>> {
    +name
    +rotationHistory()
    +rotationPlanDrafts()
    +snapshots()
    +plantZones()
    +plants()
  }
  class PlantZone <<entity>> {
    +name
    +soil_type
    +rotation_stage
    +last_planting_date
    +plants()
    +rotationHistory()
  }
  class Plant <<entity>> {
    +name
    +type
    +plant_size
    +rest_time_days
    +reusable
    +plantZone()
    +rotationHistory()
  }
  class RotationHistory <<entity>> {
    +plant_zone_id
    +from_plant_zone_id
    +from_zone_name
    +to_zone_name
    +decision_status
    +decision_note
    +from_date
    +to_date
    +fk_plot_id
    +fk_plant_id
    +plot()
    +plantZone()
    +fromPlantZone()
    +plant()
  }
  class RotationPlanDraft <<entity>> {
    +plot_id
    +garden_owner_id
    +planning_date
    +plan
    +plot()
    +gardenOwner()
  }
  class PlotSnapshot <<entity>> {
    +plot_id
    +garden_owner_id
    +action
    +snapshot
    +created_at
  }
}

PlotRotationPage ..> RotationController : list/recommend/plan/confirm/reject
PlotHistoryPage ..> HistoryController : listPlotHistory()
RotationController ..> AccessService : authorizes
RotationController ..> RotationPlannerService : evaluates draft
RotationController ..> PlotSnapshotService : snapshots confirmed changes
RotationController ..> RotationHistory : creates manual records
RotationController ..> RotationPlanDraft : creates/updates/deletes
HistoryController ..> AccessService : authorizes
HistoryController ..> PlotSnapshotService : listHistoryForPlot()
RotationPlannerService ..> CropRotationClassifier : plant rotation profile
RotationPlannerService ..> RotationPlanDraft : persists draft
RotationPlannerService ..> RotationHistory : creates confirmed history
RotationPlannerService ..> Plant : moves plants
RotationPlannerService ..> PlantZone : checks capacity/rest
PlotSnapshotService ..> PlotSnapshot : stores JSON versions

Plot "1" -- "0..*" RotationHistory : records
Plot "1" -- "0..*" RotationPlanDraft : drafts
Plot "1" -- "0..*" PlotSnapshot : history snapshots
PlantZone "1" -- "0..*" RotationHistory : target zone
PlantZone "0..1" -- "0..*" RotationHistory : from zone
Plant "1" -- "0..*" RotationHistory : rotated plant
Plot "1" -- "0..*" PlantZone : contains
PlantZone "1" -- "0..*" Plant : contains

@enduml
